cgt-macros/tests/trybuild/failures/cgt_test_attr.rs
#[cgt_macros::cgt_test(attribute)]
fn test() -> Result<(), cgt_core::TestError> {
    Ok(())
}

fn main() {}